<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shop_intro_no_coins_bg">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="164dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:text="@string/shop_intro_no_coins_title"
        android:textAppearance="@style/TextAppearance.YFC.Heading8"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_1x"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:text="@string/shop_intro_no_coins_subtitle"
        android:textAppearance="@style/TextAppearance.YFC.Body2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/helper_action"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="36dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:text="@string/shop_intro_no_coins_helper_action"
        android:textAppearance="@style/TextAppearance.YFC.Body2"
        android:textColor="@color/main_active"
        app:layout_constraintBottom_toTopOf="@id/action_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <FrameLayout
        android:id="@+id/action_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/helper_action">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action"
            style="@style/Widget.YFC.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_1.5x"
            android:layout_marginBottom="@dimen/spacing_2.5x"
            android:text="@string/shop_intro_action" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>