<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_container"
        style="@style/Widget.YFC.ScrollView.Content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_1x"
                android:layout_marginTop="@dimen/spacing_1x"
                android:text="@string/delivery_address"
                android:textAppearance="@style/TextAppearance.YFC.Heading2"
                android:textColor="@color/black" />

            <include
                android:id="@+id/field_city"
                layout="@layout/item_settings_field" />

            <include
                android:id="@+id/field_street"
                layout="@layout/item_settings_field" />

            <include
                android:id="@+id/field_address_details"
                layout="@layout/item_settings_field" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_1x">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/save_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_1x"
                    android:layout_marginBottom="@dimen/spacing_0.25x"
                    android:text="@string/save_address_title"
                    android:textAppearance="@style/TextAppearance.YFC.Subheading7"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@id/save_subtitle"
                    app:layout_constraintEnd_toStartOf="@id/save_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/save_subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_1x"
                    android:text="@string/save_address_subtitle"
                    android:textAppearance="@style/TextAppearance.YFC.Body1"
                    android:textColor="@color/text_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/save_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/save_title" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/save_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_1x"
                    android:checked="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_1x"
                android:layout_marginTop="@dimen/spacing_1x"
                android:text="@string/contact_info"
                android:textAppearance="@style/TextAppearance.YFC.Heading2"
                android:textColor="@color/black" />


            <include
                android:id="@+id/field_name"
                layout="@layout/item_settings_field" />

            <include
                android:id="@+id/field_email"
                layout="@layout/item_settings_field" />

            <include
                android:id="@+id/field_number"
                layout="@layout/item_settings_field" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/bottom_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:elevation="10dp"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_action"
            style="@style/Widget.YFC.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_1x"
            android:text="@string/action_continue" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>