<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_blue">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/shop_intro_image_1" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/shop_intro_image_2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1.5x"
        android:layout_marginTop="@dimen/spacing_4.75x"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:text="@string/your_coin_balance"
        android:textAppearance="@style/TextAppearance.YFC.Heading4"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/coins_label"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="@dimen/spacing_0.5x"
        app:layout_constraintEnd_toStartOf="@id/coins_amount"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:srcCompat="@drawable/ic_coins_big" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/coins_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.YFC.Heading7"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/coins_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/coins_label"
        app:layout_constraintTop_toTopOf="@id/coins_label"
        tools:text="120 coins   =   AED 50" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_1x"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:text="@string/shop_intro_subtitle"
        android:textAppearance="@style/TextAppearance.YFC.Body2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coins_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action"
        style="@style/Widget.YFC.Button.Outline.Rounded"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_1.5x"
        android:text="@string/shop_intro_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle" />

</androidx.constraintlayout.widget.ConstraintLayout>