<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_input_toolbar_rounded"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/spacing_1x">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_shop_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/spacing_1x" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/spacing_1x" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_coins"
        style="@style/Widget.YFC.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_1x"
        android:digits="0123456789"
        android:drawableEnd="@drawable/ic_coins_big"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="0"
        android:imeOptions="actionNext"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:nextFocusRight="@id/input_range_end"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_amount_error"
        style="@style/Widget.YFC.TextView.Error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_0.25x"
        android:gravity="start"
        android:text="@string/not_enough_coins_error"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/input_coins" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/current_redemption_label"
        style="@style/Widget.YFC.TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_0.75x"
        android:layout_marginEnd="@dimen/spacing_0.5x"
        android:maxLines="1"
        android:text="@string/redemption_current_item_label"
        android:textAppearance="@style/TextAppearance.YFC.Hint"
        android:textColor="@color/text_gray"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@id/current_redemption_value"
        app:layout_constraintTop_toBottomOf="@id/text_amount_error" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/current_redemption_value"
        style="@style/Widget.YFC.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_0.75x"
        android:drawableStart="@drawable/ic_profile_coins"
        android:drawablePadding="@dimen/spacing_0.4x"
        android:gravity="end"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.YFC.Hint"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/current_redemption_label"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/text_amount_error"
        tools:text="50 / AED 25" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/balance_redemption_label"
        style="@style/Widget.YFC.TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_0.25x"
        android:layout_marginEnd="@dimen/spacing_0.5x"
        android:maxLines="1"
        android:text="@string/redemption_balance_label"
        android:textAppearance="@style/TextAppearance.YFC.Hint"
        android:textColor="@color/text_gray"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@id/balance_redemption_value"
        app:layout_constraintTop_toBottomOf="@id/current_redemption_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/balance_redemption_value"
        style="@style/Widget.YFC.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_0.25x"
        android:drawableStart="@drawable/ic_profile_coins"
        android:drawablePadding="@dimen/spacing_0.4x"
        android:gravity="end"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.YFC.Hint"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/balance_redemption_label"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/current_redemption_value"
        tools:text="10 / AED 5" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_action"
        style="@style/Widget.YFC.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_2.5x"
        android:layout_marginBottom="@dimen/spacing_1x"
        android:text="@string/filters_apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balance_redemption_value" />

</androidx.constraintlayout.widget.ConstraintLayout>